# Assignment-1

./: .gitignore  Assignment1.qmd  Assignment1.quarto_ipynb  Assignment1.quarto_ipynb_1  Assignment1.quarto_ipynb_10  Assignment1.quarto_ipynb_11  Assignment1.quarto_ipynb_12  Assignment1.quarto_ipynb_13  Assignment1.quarto_ipynb_14  Assignment1.quarto_ipynb_15  Assignment1.quarto_ipynb_16  Assignment1.quarto_ipynb_17  Assignment1.quarto_ipynb_18  Assignment1.quarto_ipynb_19  Assignment1.quarto_ipynb_2  Assignment1.quarto_ipynb_20  Assignment1.quarto_ipynb_3  Assignment1.quarto_ipynb_4  Assignment1.quarto_ipynb_5  Assignment1.quarto_ipynb_6  Assignment1.quarto_ipynb_7  Assignment1.quarto_ipynb_8  Assignment1.quarto_ipynb_9  pyproject.toml
sa2_2023/: statistical-area-2-2023-generalised.txt
