[project]
name = "assignment1"
version = "0.1.0"
description = "GISCI343 Assignment 1"
requires-python = ">=3.10"
dependencies = [
    "branca>=0.8.2",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]

